<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ExpertQR</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="button_Login">Login</string>
    <string name="title_activity_poser_question">PoserQuestionActivity</string>
    <string name="button_PoserQuestion">Poser une question</string>
    <string name="button_RepondreQuestion">Repondre a une question</string>
    <string name="button_LireEvaluer">Lire et evaluer une reponse</string>
    <string name="button_Expert">Je suis un expert</string>
    <string name="button_ChoisirExpertises">Choisir mon expertise</string>
    <string name="button_NonExpert">Je ne suis pas un expert</string>
    <string name="button_Ok">Ok</string>
    <string name="button_Cancel">Cancel</string>
    <string name="label_expertise_requise">Expertise requise</string>
    <string name="label_lire_evaluer_reponse">Lire et evaluer une reponse</string>
    <string name="label_nouvelleCategorie">Ajouter une nouvelle expertise</string>
    <string name="button_ajouterCategorie">Ajouter</string>
    <string name="label_choisir_expertise">Choix de l\'expertise</string>
    <string name="button_MisAJour">Mis a jour</string>
    <string name="label_reponse">La reponse a la question choisie</string>
    <string name="button_voir_reponse">Voir la reponse</string>
    <string name="label_evaluer_reponse">Evaluation de la reponse (1-5)</string>
    <string name="title_activity_repondre_question">RepondreQuestionActivity</string>
    <string name="title_activity_lire_evaluer">LireEvaluerActivity</string>
    <string name="title_activity_expertise">ExpertiseActivity</string>
    <string name="label_pas_de_question">Aucune question pour ton expertise!</string>
    <string name="label_pas_de_reponse">*Pas de reponse pour le moment*</string>
    <string name="label_erreur_evaluation_numerique">L\'evaluation doit etre une valeur numerique entiere.</string>
    <string name="label_pour_expert">Section Expert</string>

</resources>
