<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ca.uottawa.seg2505.expertqrandroid.ExpertiseActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/label_choisir_expertise"
        android:textAppearance="?android:attr/textAppearanceLarge" />
<Spinner
        android:id="@+id/spinnerChoixExpertise"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
<TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/label_nouvelleCategorie"
        android:textAppearance="?android:attr/textAppearanceLarge" />
<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <EditText
            android:id="@+id/editTextNouvelleCategorie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/buttonAjouterExpertise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onAjouterExpertise"
            android:text="@string/button_ajouterCategorie" />

    </LinearLayout>
<Button
        android:id="@+id/buttonOk"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="bottom"
        android:layout_weight="1"
        android:onClick="onOk"
        android:text="@string/button_Ok" />
<Button
        android:id="@+id/buttonCancel"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="bottom"
        android:layout_weight="1"
        android:onClick="onCancel"
        android:text="@string/button_Cancel" />

</LinearLayout>
