<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ca.uottawa.seg2505.expertqrandroid.LireEvaluerActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_lire_evaluer_reponse"
        android:textAppearance="?android:attr/textAppearanceLarge" />
<Spinner
        android:id="@+id/spinnerQuestionsAvecReponses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
<Button
        android:id="@+id/buttonVoirReponse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onVoirReponse"
        android:text="@string/button_voir_reponse" />
<TextView
        android:id="@+id/textViewReponse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium" />
<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_evaluer_reponse" />

        <EditText
            android:id="@+id/editTextEvaluation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10" >

            <requestFocus />
        </EditText>

    </LinearLayout>
<FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="vertical" >

            <Button
                android:id="@+id/buttonOk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:onClick="onOk"
                android:text="@string/button_Ok" />

            <Button
                android:id="@+id/buttonCancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:onClick="onCancel"
                android:text="@string/button_Cancel" />
        </LinearLayout>
    </FrameLayout>

</LinearLayout>
