<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ca.uottawa.seg2505.expertqrandroid.PoserQuestionActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_poser_question"
        android:textAppearance="?android:attr/textAppearanceLarge" />
<EditText
        android:id="@+id/editTextQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:minLines="2" >

        <requestFocus />
    </EditText>
<TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_expertise_requise"
        android:textAppearance="?android:attr/textAppearanceLarge" />
<Spinner
        android:id="@+id/spinnerExpertiseRequise"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
<FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="top" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="vertical" >

            <Button
                android:id="@+id/buttonOk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:onClick="onOk"
                android:text="@string/button_Ok" />

            <Button
                android:id="@+id/buttonCancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:onClick="onCancel"
                android:text="@string/button_Cancel" />

        </LinearLayout>

    </FrameLayout>

</LinearLayout>
